Fixed about section mobile width and mobile portfolio section css'd

--- a/css/style.css
+++ b/css/style.css
@@ -846,9 +846,10 @@ div.navbardiv {
 		width: 100%;
 		float: none;
 	}
-	div.websitetext{
+	div.websitetext {
 		width: 100%;
 		float: none;
+	}
 
 	div.websitetext h2{
 		font-size: 14pt;
